--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -2,50 +2,22 @@
     height: 200px;
     width: 100%;
     display: flex;
-    background-color: var(--input-background);
-    margin-top: 40px;
-    border:10px;
-    border-color: grey;
-    width: 75%;
-    margin-left: 100px;
-    border-radius: 10px;
-    display:flex;
-    border: 10px;
-    padding-left: 20px;
-    border-radius: 10px;
-    
-
-
+    background-color: var(--surface-background);
+    border-radius: 16px;
+    margin: 20px auto;
+    border: 1px solid rgb(35, 35, 35);
 }
 .Image img{
-    border-radius: 4px;
-    align-items: flex-start;
-    height: 100%;
-    width:200px;
-    margin-top: 10px;
-    margin-right: 20px;
-    display: inline;
-    position: relative;
-    margin-inline-start: 10px;
-    margin-inline-end: 10px;
-}
-.Heading {
-    color: white;
-    font-weight: bolder;
-    text-align: left;
-    font-size: 30px;
-    position: relative;
+    width: 200px;
+    height: 200px;
 }
 
-
-
-.text-about {
-    color: white;
-    text-align: left;
-    font-size: small;
-    word-wrap: inherit;
-
+.Content .Heading {
+    margin-top: 20px;
+    color: var(--text-primary);
 }
-.Content{
-    width: fit-content;
+
+.Content .text-about {
+    margin-top: 16px;
+    color: var(--text-primary);
 }
