--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
     --background: #000100;
     
     /* CARD SURFACE COLOR */
-    --surface: #2f2f2f;
+    --surface: #0d0d0d;
     
     /* PRIMARY COLOR */
     --primary: #42ffff;
@@ -15,7 +15,7 @@
     --text-secondary: #d9d6d6;
     
     /* INPUT BACKGROUND */
-    --input-background: #373737;
+    --input-background: #1a1a1a;
     
     /* INPUT TEXT PLACEHOLDER */
     --input-text-placeholder: #9c9c9c;
