--- a/src/Section/Services/Services.css
+++ b/src/Section/Services/Services.css
@@ -1,79 +1,59 @@
-.services-container {
-    width: 100%;
+.services-images-home {
     display: flex;
+    gap: 60px;
+    align-items: center;
     justify-content: center;
-    height: auto;
-    flex-direction: column;
+    margin: 20px 0;
 }
 
-.service-top {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-}
-
-.service-top p {
-    color: var(--text-secondary);
-    margin-top: 40px;
-    width: 60%;
-    margin: 20px auto;
-}
-
-.services-bottom .images-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-    flex-wrap: wrap;
-}
-
-.image-container {
+.services-home-card {
     width: 300px;
-    height: 500px;
+    height: 400px;
+    position: relative;
+    border-radius: 16px;     
     overflow: hidden;
-    border-radius: 40px;
-    display: flex;
-    margin: 40px 0;
 }
 
-.img1 {
-    background: url("../../assets/services/Service-1.png") no-repeat;
-    background-position: center center;
-    background-size: cover;
-}
+.services-home-card .services-home-card-image {
+    width: 100%;    
+    height: 100%;
+    position: absolute;
+} 
 
-.img2 {
-    background: url("../../assets/services/Service-2.png") no-repeat;
-    background-position: center center;
-    background-size: cover;
-}
-
-.img3 {
-    background: url("../../assets/services/Service-3.png") no-repeat;
-    background-position: center center;
-    background-size: cover;
-}
-
-.image-container .overlay {
+.services-home-card .services-home-card-image img {
     width: 100%;
     height: 100%;
-    background-color: var(--background);
-    opacity: .8;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    object-fit: cover;
 }
 
-.image-container .overlay p {
-    color: var(--text-primary);
-    opacity: 1;
-}
-
-.services-bottom .button {
+.services-home-card .overlay {
+    position: relative;
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
+    color: var(--text-primary);
+}
+
+.services-home-card .overlay {
+    text-align: center;
+    padding: 6px;
+}
+
+.services-home-card .overlay::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--background);
+    opacity: .7;
+    z-index: -1;
+}
+
+@media (max-width: 768px) {
+    .services-images-home {
+        flex-direction: column;
+    }
 }
